--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "node Backend/lib/server.js",
     "server": "nodemon Backend/lib/server.js",
     "client": "npm start --prefix Frontend",
-    "dev": "concurrently \"npm run server\" \"npm run client\" "
+    "dev": "concurrently \"npm run server\" \"npm run client\" ",
+    "data:import":"node Backend/seederScript.js"
   },
   "repository": {
     "type": "git",
