--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -2,7 +2,7 @@
   "name": "sds",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:6600",
+  "proxy": "http://127.0.0.1:6300",
   "dependencies": {
     "@emotion/react": "^11.7.0",
     "@emotion/styled": "^11.6.0",
